Alteração notify Slack

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,27 @@
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
+  slack: circleci/slack@4.1
+jobs:
+  deploy:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/install-packages
+      - run:
+          command: npm run deploy
+      - slack/notify:
+          channel:
+          event: pass
+          template: success_tagged_deploy_1
+          event: fail
+          template: basic_fail_1
 workflows:
   node-tests:
     jobs:
       - node/test
+  deploy_and_notify:
+    jobs:
+      - deploy:
+          context: slack-secrets
