--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,10 @@ jobs:
       - run:
           command: npm run deploy
       - slack/notify:
-          channel:
+          channel: testintegração
           event: pass
           template: success_tagged_deploy_1
-          event: fail
-          template: basic_fail_1
+
 workflows:
   node-tests:
     jobs:
