--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,11 @@ jobs:
           channel: testintegração
           event: pass
           template: basic_success_1
+
 workflows:
-  - deploy_and_notify:
-        jobs:
-          - deploy:
-              context:
-                 - slack-secrets
+  deploy_and_notify:
+    jobs:
+      - deploy:
+          context:
+            - slack-secrets
 
