--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
       - checkout
       - node/install:
               install-yarn: true
-      - run: yarn build
-      - run: yarn test
+      - run: npm run build
+      - run: npm run test
       - slack/notify:
           channel: testintegracao
           event: pass
