--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,12 @@
 version: 2.1
 orbs:
+  aws-s3: circleci/aws-s3@2.0.0
   node: circleci/node@4.3.0
   slack: circleci/slack@4.3.0
 jobs:
   build:
     docker:
-      - image: cimg/node:16.1.0
+      - image: cimg/node:default
     steps:
       - checkout
       - run: node --version
