--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,9 @@ jobs:
       - checkout
       - node/install:
               install-yarn: true
-
+              install-npm: true
       - node/install-packages:
-         # cache-path: ~/project/node_modules
+          cache-path: ~/project/node_modules
           override-ci-command: yarn install
           pkg-manager: yarn
 
