--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ version: 2.1
 orbs:
   node: circleci/node@4.3.0
   slack: circleci/slack@4.3.0
+  aws-cli: circleci/aws-cli@2.0.0
+  aws-s3: circleci/aws-s3@2.0.0
 jobs:
   build:
     docker:
@@ -25,10 +27,25 @@ jobs:
           channel: testintegracao
           event: fail
           template: basic_fail_1
+  deploy:
+        executor: aws-cli/default
+        steps:
+          - checkout
+          - attach_workspace:
+              at: .
+          - aws-cli/setup:
+              profile-name: default
+          - run:
+              name: Upload file to S3
+              command: aws s3 sync ./dist/ s3://circleci-test-react --delete
 
 workflows:
   build_and_notify:
     jobs:
       - build
-
+      - deploy:
+          requires:
+            - build
+          context: aws-context
+          
 
