--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
               install-yarn: true
       - node/install-packages:
           cache-path: ~/project/node_modules
-          override-ci-command: yarn install
+         # override-ci-command: yarn install
           pkg-manager: yarn
 
       - run: yarn build
