--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
             - ~/.cache/yarn
             - node_modules  
       - run: yarn build
-      - run: yarn test
+  #    - run: yarn test
   #    - slack/notify:
   #        channel: testintegracao
   #        event: pass
